--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <a href="#" class="navbar-brand" >
                 <img src="./assets/img/logo.png" alt="logo" srcset="" width="30" height="30">
-                William's page
+                Cymetria page's
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="toggle navigation">
 
